--- a/public/mj-video-telegram.html
+++ b/public/mj-video-telegram.html
@@ -325,7 +325,7 @@
         setStatus("✅ Request submitted.", "text-emerald-300");
         if (successBox && successText){
           successBox.classList.remove("hidden");
-          successText.innerHTML = " Submitted successfully. You will receive the video in Telegram when it is ready.<br/>Запрос успешно принят. Вы получите видео в Telegram, когда он будет готов.";
+          successText.innerHTML = "✦Submitted successfully. You will receive the video in Telegram when it is ready.<br/>✦Запрос успешно принят. Вы получите видео в Telegram, когда он будет готов.";
         }
       } catch (err) {
         console.error(err);
