--- a/public/runway-telegram.html
+++ b/public/runway-telegram.html
@@ -136,7 +136,7 @@
               <h2 class="text-xs font-semibold text-zinc-200 mb-1">Instructions</h2>
               <ol class="list-decimal list-inside text-[11px] text-zinc-400 space-y-1.5">
                 <li>Option 1: type your prompt (text-to-video).</li>
-                <li>Option 2: upload 1 image and type your prompt (image-to-video).</li>
+                <li>Option 2: Write your prompt or upload 1 image and type your prompt (image-to-video).</li>
                 <li>Click Run button.</li>
                 <li>If you have enough credits, the result will be sent to your bot's chat.</li>
               </ol>
