--- a/public/kling-2.5.html
+++ b/public/kling-2.5.html
@@ -44,7 +44,7 @@
         </div>
         <div class="flex flex-col leading-tight">
           <span class="text-sm font-semibold text-white">Hansora AI</span>
-          <span class="text-xs text-zinc-400">Kling v2.5 Turbo Text / Image → Video</span>
+          <span class="text-xs text-zinc-400">Kling 2.5 Turbo Text / Image → Video</span>
         </div>
       </div>
       <div class="flex items-center gap-3 text-xs">
@@ -62,7 +62,7 @@
         <div class="flex items-start justify-between gap-3">
           <div>
             <h1 class="text-lg md:text-xl font-semibold text-white">
-              Kling v2.5 Turbo (Text / Image → Video)
+              Kling 2.5 Turbo (Text / Image → Video)
             </h1>
             <p class="text-xs md:text-sm text-zinc-400 mt-1">
               Use only text, or upload 1 image + prompt, and get a short AI video.
