--- a/public/kling-2.1.html
+++ b/public/kling-2.1.html
@@ -72,30 +72,32 @@
 
         <div class="grid md:grid-cols-[1.1fr,0.9fr] gap-4 md:gap-6 items-start">
           <div class="space-y-4">
-            <div class="space-y-2">
-              <label class="block text-xs font-medium text-zinc-300 mb-1">Start Frame (required)</label>
-              <input
-                id="startFrameInput"
-                type="file"
-                accept="image/*"
-                class="input-dark block w-full text-xs file:mr-3 file:py-2 file:px-3 file:rounded-lg file:border-0 file:text-xs file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-400"
-              />
-              <div id="startThumbs" class="mt-2 flex gap-2 flex-wrap"></div>
-            </div>
+            <div class="flex flex-row gap-4">
+              <div class="flex-1 space-y-2">
+                <label class="block text-xs font-medium text-zinc-300 mb-1">Start Frame (required)</label>
+                <input
+                  id="startFrameInput"
+                  type="file"
+                  accept="image/*"
+                  class="input-dark block w-full text-xs file:mr-3 file:py-2 file:px-3 file:rounded-lg file:border-0 file:text-xs file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-400"
+                />
+                <div id="startThumbs" class="mt-2 flex gap-2 flex-wrap"></div>
+              </div>
 
-            <div class="space-y-2">
-              <label class="block text-xs font-medium text-zinc-300 mb-1">End Frame (optional)</label>
-              <input
-                id="endFrameInput"
-                type="file"
-                accept="image/*"
-                class="input-dark block w-full text-xs file:mr-3 file:py-2 file:px-3 file:rounded-lg file:border-0 file:text-xs file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-400"
-              />
-              <div id="endThumbs" class="mt-2 flex gap-2 flex-wrap"></div>
-              <p class="text-[11px] text-zinc-500">
-                Max size 10MB per image. Start Frame is required, End Frame is optional.
-              </p>
+              <div class="flex-1 space-y-2">
+                <label class="block text-xs font-medium text-zinc-300 mb-1">End Frame (optional)</label>
+                <input
+                  id="endFrameInput"
+                  type="file"
+                  accept="image/*"
+                  class="input-dark block w-full text-xs file:mr-3 file:py-2 file:px-3 file:rounded-lg file:border-0 file:text-xs file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-400"
+                />
+                <div id="endThumbs" class="mt-2 flex gap-2 flex-wrap"></div>
+              </div>
             </div>
+            <p class="text-[11px] text-zinc-500">
+              Max size 10MB per image. Start Frame is required, End Frame is optional.
+            </p>
 
             <div class="space-y-2">
               <label class="block text-xs font-medium text-zinc-300 mb-1">Prompt (required)</label>
