--- a/public/nano_pro.html
+++ b/public/nano_pro.html
@@ -178,6 +178,23 @@
     const thumbsEl = document.getElementById("thumbs");
 
     let selectedFiles = [];
+
+function syncInputFiles() {
+  if (!imageInput) return;
+  if (!selectedFiles || selectedFiles.length === 0) {
+    imageInput.value = "";
+    return;
+  }
+  try {
+    const dt = new DataTransfer();
+    for (const f of selectedFiles) {
+      dt.items.add(f);
+    }
+    imageInput.files = dt.files;
+  } catch (e) {
+    // Fallback: if DataTransfer unsupported, just clear when empty (handled above)
+  }
+}
 let previewUrls = [];
 
 function revokePreviewUrls(){
@@ -215,6 +232,7 @@ function renderImageThumbs(){
     del.onclick = () => {
       selectedFiles.splice(index, 1);
       renderImageThumbs();
+      syncInputFiles();
     };
     wrap.appendChild(img);
     wrap.appendChild(del);
@@ -226,6 +244,7 @@ if (imageInput && thumbsEl){
   imageInput.addEventListener("change", () => {
     selectedFiles = Array.from(imageInput.files || []);
     renderImageThumbs();
+    syncInputFiles();
   });
 }
 
