--- a/public/kling-2.1.html
+++ b/public/kling-2.1.html
@@ -355,10 +355,6 @@
         return;
       }
 
-      // Deduct credits live in the mini app, like website
-      credits -= cost;
-      repaintCredits();
-
       runBtn.disabled = true;
       runBtn.textContent = "Working…";
 
@@ -430,8 +426,8 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             telegram_id: telegramId,
-            credits_before: credits + cost,
-            new_credits: credits,
+            credits_before: credits,
+            new_credits: credits - cost,
             cost,
             duration,
             prompt,
@@ -445,12 +441,13 @@
         const j = await resp.json().catch(() => ({}));
 
         if (!resp.ok || !j.submitted){
-          // Refund local credits on failure
-          credits += cost;
-          repaintCredits();
           const err = j && (j.error || j.message);
           throw new Error(err || "Error submitting job");
         }
+
+        // Only deduct credits after successful submission
+        credits -= cost;
+        repaintCredits();
 
         setStatus("✅ Request submitted.", "text-emerald-300");
         if (successBox && successText){
