--- a/public/kling-2.5.html
+++ b/public/kling-2.5.html
@@ -309,10 +309,6 @@
         return;
       }
 
-      // Deduct credits live in the mini app, like website
-      credits -= cost;
-      repaintCredits();
-
       runBtn.disabled = true;
       runBtn.textContent = "Working…";
 
@@ -355,8 +351,8 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             telegram_id: telegramId,
-            credits_before: credits + cost,
-            new_credits: credits,
+            credits_before: credits,
+            new_credits: credits - cost,
             cost,
             duration,
             prompt,
@@ -370,12 +366,13 @@
         const j = await resp.json().catch(() => ({}));
 
         if (!resp.ok || !j.submitted){
-          // Refund local credits on failure
-          credits += COST_PER_RUN;
-          repaintCredits();
           const err = j && (j.error || j.message);
           throw new Error(err || "Error submitting job");
         }
+
+        // Only deduct credits after successful submission
+        credits -= cost;
+        repaintCredits();
 
         setStatus("✅ Request submitted.", "text-emerald-300");
         if (successBox && successText){
