--- a/public/mj-video-telegram.html
+++ b/public/mj-video-telegram.html
@@ -262,10 +262,6 @@
         return;
       }
 
-      // Deduct credits live in the mini app, like website
-      credits -= COST_PER_RUN;
-      repaintCredits();
-
       runBtn.disabled = true;
       runBtn.textContent = "Working…";
       setStatus("Uploading image…", "text-zinc-400");
@@ -303,8 +299,8 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             telegram_id: telegramId,
-            credits_before: credits + COST_PER_RUN,
-            new_credits: credits,
+            credits_before: credits,
+            new_credits: credits - COST_PER_RUN,
             cost: COST_PER_RUN,
             prompt,
             imageUrl,
@@ -315,12 +311,13 @@
         const j = await resp.json().catch(() => ({}));
 
         if (!resp.ok || !j.submitted){
-          // Refund local credits on failure
-          credits += COST_PER_RUN;
-          repaintCredits();
           const err = j && (j.error || j.message);
           throw new Error(err || "Error submitting job");
         }
+
+        // Only deduct credits after successful submission
+        credits -= COST_PER_RUN;
+        repaintCredits();
 
         setStatus("✅ Request submitted.", "text-emerald-300");
         if (successBox && successText){
