--- a/public/nano_pro.html
+++ b/public/nano_pro.html
@@ -342,10 +342,6 @@ const resolutionSelect = document.getElementById("resolutionSelect");
         return;
       }
 
-      // Deduct credits live in the mini app, like website
-      credits -= cost;
-      repaintCredits();
-
       runBtn.disabled = true;
       runBtn.textContent = "Working…";
 
@@ -388,8 +384,8 @@ const resolutionSelect = document.getElementById("resolutionSelect");
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             telegram_id: telegramId,
-            credits_before: credits + cost,
-            new_credits: credits,
+            credits_before: credits,
+            new_credits: credits - cost,
             cost,
             prompt,
             urls: imageUrls,
@@ -403,12 +399,13 @@ const resolutionSelect = document.getElementById("resolutionSelect");
         const j = await resp.json().catch(() => ({}));
 
         if (!resp.ok || !j.submitted){
-          // Refund local credits on failure
-          credits += cost;
-          repaintCredits();
           const err = j && (j.error || j.message);
           throw new Error(err || "Error submitting job");
         }
+
+        // Only deduct credits after successful submission
+        credits -= cost;
+        repaintCredits();
 
         setStatus("✅ Request submitted.", "text-emerald-300");
         if (successBox && successText){
