--- a/public/gpt.html
+++ b/public/gpt.html
@@ -36,10 +36,12 @@
   </style>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
+    // TODO: replace PLACE_YOUR_SUPABASE_ANON_KEY_HERE with your real anon public key from Supabase (Settings → API → anon public)
     const SUPABASE_URL = "https://qmaealblegvcwodlmeht.supabase.co";
-    const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY_HERE";
+    const SUPABASE_ANON_KEY = "PLACE_YOUR_SUPABASE_ANON_KEY_HERE";
     if (window.supabase && typeof window.supabase.createClient === "function") {
-      window.supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      window.supabaseClient = supabase;
     }
   </script>
 
